Create review rating func

--- a/.assets/star-rating.css
+++ b/.assets/star-rating.css
@@ -42,7 +42,7 @@ label {
     color: #ffd700;
 } /* hover previous stars in list */
 
-input[type=radio]:checked+label:before {
+.rating > input[type=radio]:checked+label:before {
     color: #ffd700;
 }
 
