--- a/.assets/star-rating.css
+++ b/.assets/star-rating.css
@@ -1,5 +1,3 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-
 fieldset,
 label {
     margin: 0;
@@ -17,11 +15,26 @@ label {
     display: none;
 }
 .rating > label:before {
-    margin: 5px;
+    margin: 0 3px;
     font-size: 1.25em;
     font-family: FontAwesome;
     display: inline-block;
     content: "\f005";
+}
+.rating.rating_x2 > label:before {
+    font-size: 1.5em;
+}
+.rating.rating_x3 > label:before {
+    font-size: 1.75em;
+}
+.rating.rating_x4 > label:before {
+    font-size: 2em;
+}
+.rating.rating_x5 > label:before {
+    font-size: 2.25em;
+}
+.rating.rating_x6 > label:before {
+    font-size: 2.5em;
 }
 
 .rating > .half:before {
@@ -39,11 +52,11 @@ label {
 .rating > input:checked ~ label,
     /* show gold star when clicked */ .rating:not(:checked) > label:hover,
     /* hover current star */ .rating:not(:checked) > label:hover ~ label {
-    color: #ffd700;
+    color: #ffb200;
 } /* hover previous stars in list */
 
 .rating > input[type=radio]:checked+label:before {
-    color: #ffd700;
+    color: #ffb200;
 }
 
 .rating > input:checked + label:hover,
@@ -59,4 +72,25 @@ label {
 /* Readonly rating */
 .rating-readonly {
     pointer-events: none;
+}
+
+.rfc-star-rating-table {
+    width: 100%;
+    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.08);
+    background: #fff;
+}
+.rfc-star-rating-table th {
+    text-align: left;
+    background-color: #000000;
+    font-size: 16px;
+    color: #ffffff;
+    padding: 9px 15px;
+}
+.rfc-star-rating-table th,
+.rfc-star-rating-table td {
+    padding-right: 9px;
+    padding-left: 9px;
+}
+.rfc-star-rating-table .rating > label:before {
+    margin: 0 2px;
 }
